welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value retrun
  retrun (getX(),getY())
  ^ColumnByColumn:8: error: type mismatch;
 found   : Unit
 required: Boolean
    res = true
        ^ColumnByColumn:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getX()==a && getY()==b) {
  ^